--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,9 @@
 @import 'components/menu-flip';
 @import 'components/profileEditForm';
 @import 'components/profileEditInvoiceForm';
+@import 'components/social-links';
+@import 'components/dropdown-menu';
+@import 'components/marquee';
 
 @import 'components/backend/sidebar';
 @import 'components/backend/b-btn';
