--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -110,18 +110,21 @@ $root-block-name: '.productCard';
     }
   }
   &__stock {
-    width: 100%;
-    height: 50px;
+    min-width: 68px;
+    width: fit-content;
+    height: 24px;
     position: absolute;
-    top: 0;
-    left: 0;
+    padding: 4px 12px;
+    top: 8px;
+    right: 8px;
     z-index: 3;
-    background-color: #002b48;
+    background: rgba(42, 136, 203, 0.8);
+    border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateY(-100%);
     #{$p__text} {
+      color: #fff;
       font-size: 14px;
     }
   }
