--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -55,6 +55,7 @@
 @import 'components/frontend/dialog/dialog';
 @import 'components/frontend/dialog/animate-dialog';
 @import 'components/frontend/dialog/confirm-dialog';
+@import 'components/frontend/dialog/ticket-confirm-dialog';
 @import 'components/frontend/dialog/draw-dialog';
 @import 'components/frontend/dialog/info-dialog';
 @import 'components/frontend/dialog/restPwd-dialog';
