--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -57,6 +57,8 @@
 @import 'components/frontend/dialog/confirm-dialog';
 @import 'components/frontend/dialog/ticket-confirm-dialog';
 @import 'components/frontend/dialog/draw-dialog';
+@import 'components/frontend/dialog/draw-step-dialog';
+@import 'components/frontend/dialog/draw-product-dialog';
 @import 'components/frontend/dialog/info-dialog';
 @import 'components/frontend/dialog/restPwd-dialog';
 @import 'components/frontend/f-pagination';
