--- a/src/assets/styles/components/_marquee.scss
+++ b/src/assets/styles/components/_marquee.scss
@@ -6,10 +6,10 @@ $root-block-name: '.marquee';
   @include w_h(100%, 68px);
   @include flex(center);
   overflow: hidden;
-  background: rgba(194, 246, 246, 0.3);
+  background: #d4d4d44d;
   position: relative;
   border-radius: 50px;
-  border: 1px solid #4285f4;
+  border: 1px solid #7c7c7c;
   max-width: 1280px;
   margin: 36px auto;
   &__msg {
@@ -36,7 +36,8 @@ $root-block-name: '.marquee';
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(66, 133, 244, 1);
+    background: linear-gradient(180deg, #d9d9d9 0%, #515151 100%);
+
     color: #fff;
     font-size: 32px;
   }
