--- a/src/assets/styles/components/frontend/dialog/_draw-step-dialog.scss
+++ b/src/assets/styles/components/frontend/dialog/_draw-step-dialog.scss
@@ -17,4 +17,14 @@ $root-block-name: '.drawStepDialog';
     transform: translateX(-50%);
     z-index: 9999999999999;
   }
+  &__img {
+    position: fixed;
+    inset: 0;
+    z-index: 999999;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
