--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -60,6 +60,7 @@
 @import 'components/frontend/dialog/draw-step-dialog';
 @import 'components/frontend/dialog/draw-product-dialog';
 @import 'components/frontend/dialog/info-dialog';
+@import 'components/frontend/dialog/img-dialog';
 @import 'components/frontend/dialog/restPwd-dialog';
 @import 'components/frontend/f-pagination';
 @import 'components/frontend/checkoutInfoForm';
