--- a/src/assets/styles/components/_dropdown-menu.scss
+++ b/src/assets/styles/components/_dropdown-menu.scss
@@ -6,26 +6,75 @@ $root-block-name: '.dropdown-menu';
   $p__trigger: #{$p}__trigger;
   $p__content: #{$p}__content;
   $p__item: #{$p}__item;
+  $p__item-icon: #{$p}__item-icon;
   &--header {
     #{$p__trigger} {
       min-width: 100px;
+      padding: 12px 24px;
       height: 38px;
       border-radius: 50px;
       border: 1px solid #000000;
       display: flex;
       align-items: center;
       justify-content: center;
+      gap: 12px;
+      &-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 28px;
+      }
     }
     #{$p__content} {
       display: flex;
       flex-direction: column;
-      width: 180px;
+      width: 200px;
       box-shadow: 0px 4px 12px 0px #00000040;
       background: #d8ffff;
-      padding: 24px;
+      padding: 12px;
     }
     #{$p__item} {
       border-bottom: 1px solid #85ffff;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      &-icon {
+        font-size: 28px;
+      }
+      &--coins {
+        border-bottom: none;
+
+        #{$p__item-icon} {
+          width: 28px;
+          height: 28px;
+          border-radius: 30px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: #fff;
+          font-size: 16px;
+        }
+      }
+
+      &--gold {
+        color: #fbbc05;
+        #{ $p__item-icon} {
+          background: #fbbc05;
+        }
+      }
+      &--sliver {
+        color: #aeaeb2;
+        #{ $p__item-icon} {
+          background: #aeaeb2;
+        }
+      }
+      &--bonus {
+        color: #fe4206;
+        #{ $p__item-icon} {
+          background: #fe4206;
+        }
+      }
 
       &:last-child {
         border-bottom: none;
