--- a/src/assets/styles/components/frontend/dialog/_ticket-confirm-dialog.scss
+++ b/src/assets/styles/components/frontend/dialog/_ticket-confirm-dialog.scss
@@ -115,11 +115,11 @@ $root-block-name: '.ticketConfirmDialog';
   }
 
   &__total {
-    margin: 0 auto;
+    margin: 36px auto;
     max-width: 720px;
     display: flex;
     align-items: end;
-    justify-content: space-between;
+    justify-content: center;
     &-text {
       #{$p__text} {
         font-size: 25px;
@@ -131,10 +131,11 @@ $root-block-name: '.ticketConfirmDialog';
   }
 
   &__checkboxes {
-    margin: 24px auto;
+    margin: 36px auto;
     max-width: 720px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     #{$p__text} {
       font-size: 25px;
       font-weight: 600;
