--- a/src/assets/styles/pages/_product-detail.scss
+++ b/src/assets/styles/pages/_product-detail.scss
@@ -15,9 +15,11 @@ $root-block-name: '.productDetail';
   &__status {
     display: flex;
     align-items: center;
+    gap: 12px;
     #{$p__icon} {
-      width: 66px;
-      height: 66px;
+      display: flex;
+      font-size: 64px !important;
+      color: #85ffff !important;
     }
     #{$p__text} {
       font-size: 24px !important;
@@ -29,7 +31,7 @@ $root-block-name: '.productDetail';
   &__infos {
     width: 100%;
     height: 860px;
-    background: #000;
+    background: linear-gradient(90deg, #7897ba 0%, #cbeded 99%);
     border-radius: 20px;
     margin: 48px 0;
   }
@@ -57,7 +59,7 @@ $root-block-name: '.productDetail';
         &--productName {
           font-size: 24px;
           font-weight: 400;
-          color: #fff;
+          color: #000;
         }
       }
     }
@@ -79,12 +81,16 @@ $root-block-name: '.productDetail';
     &-item {
       @include flex(center, center);
       gap: 12px;
+      border: 1px solid #ffffff;
+      padding: 8px 24px;
+      border-radius: 50px;
       #{$p__icon} {
         width: 34px;
         height: 34px;
         background: #fff;
         border-radius: 50%;
         @include flex(center, center);
+        color: #a6c7d6;
       }
       #{$p__text} {
         font-size: 20px;
@@ -95,14 +101,34 @@ $root-block-name: '.productDetail';
   }
   //
   &__awards {
-    padding: 60px 120px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    padding: 60px 0;
+    display: flex;
     gap: 24px;
-    @include screen(lg) {
-      padding: 6px 0;
-      grid-template-columns: 1fr;
-      gap: 8px;
+    &-list {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 24px;
+      @include screen(lg) {
+        padding: 6px 0;
+        grid-template-columns: 1fr;
+        gap: 8px;
+      }
+    }
+
+    &-infos {
+      @include screen(lg) {
+        display: none;
+      }
+    }
+  }
+
+  &__contact {
+    width: 296px;
+    height: 428px;
+    img {
+      width: 100%;
+      height: 100%;
     }
   }
   &__awardItem {
