--- a/src/assets/styles/pages/backend/_newsManagement.scss
+++ b/src/assets/styles/pages/backend/_newsManagement.scss
@@ -49,6 +49,12 @@ $root-block-name: '.newsManagement';
     }
   }
 
+  &__btns {
+    display: flex;
+    justify-content: center;
+    gap: 12px;
+  }
+
   &__btn {
     min-width: 120px;
     height: 40px;
