--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -89,7 +89,7 @@
 @import 'pages/mallOrderSuccess';
 @import 'pages/no-data';
 @import 'pages/about';
-@import 'pages/transaction';
+@import 'pages/faq';
 @import 'pages/privacy';
 @import 'pages/policy';
 @import 'pages/news';
