--- a/src/assets/styles/pages/_about.scss
+++ b/src/assets/styles/pages/_about.scss
@@ -3,17 +3,22 @@ $root-block-name: '.about';
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
-  padding: 48px;
-  @include flex;
-  flex-direction: column;
-  gap: 24px;
+  @include flex(null, null, column);
+  gap: 36px;
+  padding: 0 0 64px 0;
+  max-width: 1280px;
+  margin: 0 auto;
+
+  @include screen(lg) {
+    margin: 0 24px;
+  }
 
   #{$p__text} {
     font-weight: bold;
     color: #7c7c7c;
     font-size: 24px;
     &--highlight {
-      color: #eb9838;
+      color: #4285f4;
     }
   }
   &__title {
