--- a/src/assets/styles/pages/backend/_vendorManagement.scss
+++ b/src/assets/styles/pages/backend/_vendorManagement.scss
@@ -11,46 +11,10 @@ $root-block-name: '.vendorManagement';
     font-weight: bold;
     letter-spacing: 0.5px;
   }
-
-  &__filter {
-    display: flex;
-    margin-bottom: 12px;
-    &-btn {
-      min-width: 120px;
-      height: 40px;
-      background: #fff;
-      border: 1px solid #6b9fd2;
-      outline: none;
-      border-radius: 4px;
-      color: #6b9fd2;
-      font-weight: bold;
-      letter-spacing: 2px;
-      cursor: pointer;
-      &.active {
-        background: #6b9fd2;
-        border: none;
-        color: #fff;
-      }
-    }
-  }
-
-  &__productFilter {
-    margin-bottom: 12px;
-    select {
-      margin-left: 8px;
-      padding: 6px 12px;
-      font-size: 14px;
-      color: #333;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      background-color: #fff;
-      outline: none;
-      transition: border-color 0.3s ease, box-shadow 0.3s ease;
-    }
-  }
   &__btns {
     display: flex;
     justify-content: center;
+    gap: 12px;
   }
   &__btn {
     min-width: 120px;
@@ -93,7 +57,7 @@ $root-block-name: '.vendorManagement';
 }
 
 .vendorManagement th {
-  background-color: #007bff;
+  background-color: #6b9fd2;
   color: white;
   font-weight: bold;
 }
