--- a/src/assets/styles/components/backend/dialog/_order-shipment-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_order-shipment-dialog.scss
@@ -6,7 +6,6 @@ $root-block-name: '.orderShipmentDialog';
   padding: 36px;
   flex: 1;
   flex-direction: column;
-  overflow: auto;
   &__text {
     color: #4787c7;
     letter-spacing: 0.5px;
@@ -43,37 +42,16 @@ $root-block-name: '.orderShipmentDialog';
     letter-spacing: 2px;
   }
 }
-
 @media print {
-  /* 隱藏不必要的元素 */
-  .orderManagement__filter,
-  .pagination,
-  .status-select,
-  .btn {
-    display: none;
+  * {
+    font-size: 10px;
   }
-
-  /* 格式化內容 */
-  .orderManagement__list-content {
-    margin: 0;
+  @page {
+    size: A4;
+    /* 强制纸张大小为 A4 */
+    margin: 3mm;
+    /* 页面边距 */
     padding: 0;
-    font-size: 14px;
-  }
-
-  .orderManagement__list-content table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  .orderManagement__list-content th,
-  .orderManagement__list-content td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-
-  /* 隱藏背景色及其他多餘裝飾 */
-  body {
-    background: white;
-    color: black;
+    /* 页面内边距 */
   }
 }
