--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -66,6 +66,7 @@
 @import 'components/frontend/dialog/img-dialog';
 @import 'components/frontend/dialog/news-banner-dialog';
 @import 'components/frontend/dialog/restPwd-dialog';
+@import 'components/frontend/dialog/f-order-detail-dialog';
 @import 'components/frontend/f-pagination';
 @import 'components/frontend/checkoutInfoForm';
 // Layout
