--- a/src/assets/styles/pages/_deposit.scss
+++ b/src/assets/styles/pages/_deposit.scss
@@ -3,96 +3,242 @@ $root-block-name: '.deposit';
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
+  $p__icon: #{$p}__icon;
 
-  &__item {
-    @include flex(center, center, column);
+  @include flex(center, null, column);
+  padding: 0 0 64px 0;
+  max-width: 1280px;
+  margin: 0 auto;
+
+  @include screen(lg) {
+    margin: 0 24px;
+  }
+
+  &__header {
     width: 100%;
-    padding: 64px 0;
-    border-radius: 30px;
-    background-color: #c0ffff;
-    &-radio {
-      display: none;
-    }
-
-    &.active {
-      border: 2px solid #2a88cb;
-      background: #2a88cb;
-      color: #85ffff;
-    }
-    &-img {
-      img {
-        max-width: 174px;
-      }
-    }
-    &-icon {
-      width: 50px;
-      height: 50px;
-    }
-    &-num {
-      font-size: 40px;
-      font-weight: 900;
-      @include flex(center);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 96px 0;
+    padding: 48px 0;
+    border-bottom: 1px solid #2a88cb;
+    position: relative;
+    @include screen(lg) {
+      flex-direction: column;
       gap: 24px;
     }
-  }
 
-  &__title {
-    @include flex(center, center);
-    #{$p__text} {
-      font-size: 60px;
-      font-weight: 400;
-      position: relative;
-      color: #2a88cb;
-    }
-  }
-  &__btns {
-    @include flex(center, center);
-    gap: 16px;
-    margin: 24px 0;
-    flex-wrap: wrap;
-  }
-  &__btn {
-    width: 170px;
-    height: 53px;
-    border-radius: 50px;
-    cursor: pointer;
-    @include flex(center, center);
-
-    font-size: 25px;
-    font-weight: 400;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    background: #4285f4;
-    color: #fff;
-    @include screen(md) {
-      width: 157px;
-      height: 34px;
-      border: 1.5px solid #000000;
-      font-family: Noto Sans;
-      font-size: 15px;
-      font-weight: 400;
-    }
-    &:hover {
-      transform: scale(1.05);
-    }
-  }
-
-  &__list {
-    &-items {
-      padding: 24px;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-      gap: 16px;
+    &-title {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      #{$p__icon} {
+        width: 60px;
+        height: 60px;
+        font-size: 32px;
+      }
+      #{$p__text} {
+        font-size: 36px;
+        font-weight: 700;
+        color: #2a88cb;
+      }
 
       @include screen(lg) {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        width: 100%;
+        order: 1;
+        &::after {
+          content: '';
+          display: block;
+          flex: 1;
+          height: 1px; // Adjust height as needed
+          background-color: #2a88cb; // Adjust color as needed
+        }
       }
-      @include screen(md) {
-        padding: 8px;
-        gap: 16px;
+    }
+  }
+
+  &__step {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    &::before {
+      content: '';
+      display: block;
+      width: 15px;
+      height: 43px;
+      background: linear-gradient(0deg, #7897ba 13.95%, #cbeded 83.72%);
+
+      margin-right: 16px;
+    }
+  }
+  //
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    grid-auto-rows: 270px;
+    gap: 20px;
+    width: 100%;
+  }
+
+  &__pay {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__payList {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+    grid-auto-rows: 150px;
+    gap: 20px;
+    width: 100%;
+  }
+
+  &__priceBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+
+  &__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border: 2px solid #c0ffff;
+    border-radius: 10px;
+    background-color: #c0ffff;
+    cursor: pointer;
+    transition: background-color 0.3s, border 0.3s;
+    position: relative;
+    color: #2a88cb;
+    &:hover {
+      background-color: #2a88cb;
+      border-color: #2a88cb;
+      color: #85ffff;
+    }
+    &.active {
+      background-color: #2a88cb;
+      border-color: #2a88cb;
+      color: #85ffff;
+    }
+
+    &-box {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+    &-img {
+      width: 181px;
+      height: 181px;
+      &--pay {
+        width: 66px;
+        height: 66px;
+      }
+      img {
+        width: 100%;
+        object-fit: contain;
       }
     }
 
-    &-item {
-      @include flex(center, center, column);
+    &-label {
+      &--pay {
+        font-size: 32px;
+        font-weight: 500;
+        color: #000;
+      }
+    }
+
+    &-price {
+      position: absolute;
+      &--top {
+        top: 8px;
+        left: 8px;
+      }
+
+      &--bottom {
+        right: 8px;
+        bottom: 8px;
+      }
+    }
+  }
+
+  &__value {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  &__total {
+    &-box {
+      display: flex;
+      align-items: center;
+      justify-content: end;
+      width: 100%;
+      min-width: 240px;
+      max-width: 342px;
+      height: 48px;
+      min-height: 48px;
+      border-radius: 8px;
+      border: 1px solid #d4d4d4;
+      padding: 0 24px;
+      font-size: 20px;
+      font-weight: 400;
+      color: #7c7c7c;
+    }
+  }
+
+  &__notice {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+  &__actions {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+  }
+  &__btn {
+    width: 100%;
+    max-width: 338px;
+    height: 48px;
+    border-radius: 90px;
+    color: #fff;
+    background: #4285f4;
+
+    &--back {
+      border: 1px solid #4285f4;
+      color: #4285f4;
+      background: #fff;
+      max-width: 180px;
+    }
+    &--confirm {
+      max-width: 250px;
+    }
+  }
+
+  &__form {
+    width: 100%;
+
+    &-input {
+      @include w_h(100%, 50px);
+      padding: 14px 20px;
+      border-radius: 8px;
+      border: 1px solid #d4d4d4;
+      &--error {
+        border: 1px solid #fe4206;
+      }
     }
   }
 }
