--- a/src/assets/styles/pages/_memberCenter.scss
+++ b/src/assets/styles/pages/_memberCenter.scss
@@ -309,6 +309,14 @@ $root-block-name: '.memberCenter';
 
   //
 
+  &__orderHistory {
+    &-btn {
+      border: 1px solid #2a88cb;
+      background: #fff;
+      color: #2a88cb;
+      font-size: 14px;
+    }
+  }
   &__orderHistoryForm {
     padding: 32px 16px;
     position: relative;
