--- a/src/assets/styles/pages/_register.scss
+++ b/src/assets/styles/pages/_register.scss
@@ -72,6 +72,24 @@ $root-block-name: '.register';
     }
   }
 
+  &__input {
+    &-group {
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+  }
+  &__icon-btn {
+    position: absolute;
+    right: 10px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   &__divider {
     @include abs-center;
     height: 95%;
@@ -129,6 +147,22 @@ $root-block-name: '.register';
   &__text {
     &--error {
       color: #fe4206 !important;
+    }
+  }
+
+  &__notice {
+    display: flex;
+    img {
+      width: 100%;
+    }
+    @include screen(md) {
+      display: none;
+    }
+    &--m {
+      display: none;
+      @include screen(md) {
+        display: flex;
+      }
     }
   }
 }
