--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -173,4 +173,9 @@ $root-block-name: '.productCard';
       }
     }
   }
+  &__soldoutImg {
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+  }
 }
