--- a/src/assets/styles/pages/_product-detail.scss
+++ b/src/assets/styles/pages/_product-detail.scss
@@ -134,9 +134,38 @@ $root-block-name: '.productDetail';
   &__contact {
     width: 296px;
     height: 428px;
+    position: relative;
+    padding: 32px;
+    &-img {
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+    }
     img {
       width: 100%;
       height: 100%;
+    }
+
+    &-title {
+      font-size: 48px;
+      z-index: 2;
+      padding: 6px 0;
+      border-bottom: 2px solid #000;
+      font-weight: 900;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &-content {
+      font-size: 24px;
+      font-weight: 900;
+      z-index: 2;
+      position: relative;
+    }
+    &-social {
+      z-index: 2;
+      position: relative;
     }
   }
   &__awardItem {
