--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -431,3 +431,9 @@
   height: 10px;
   background-color: #00ffff;
 }
+img {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+}
